--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 </head>
 <body>
    <a href ="#contact"> <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/elements-and-structure/profile.jpg" alt="fashion0"></a>
-  <h3>by Isabelle Rodriguez | 1 day ago</h3>
+  <h3>by Isabelle Rodriguez | 5 min ago</h3>
   <h1>An Insider’s Guide to NYFW</h1>
   <p><a href="https://en.wikipedia.org/wiki/New_York_Fashion_Week" target="_blank">NYFW</a> can be both amazingly fun & incredibly overwhelming, especially if you’ve never been. Luckily, I’m here to give you an insider’s guide and make your first show a pleasurable experience. By taking my tips and tricks, and following your gut, you’ll have an unforgettable experience!</p>
   <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/elements-and-structure/image-one.jpeg" alt="fashion"> 
